--- a/Gangwars.csproj
+++ b/Gangwars.csproj
@@ -6,15 +6,11 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AltV.Net" Version="1.30.0-rc" />
-    <PackageReference Include="AltV.Net.Async" Version="1.30.0-dev-preview" />
+    <PackageReference Include="AltV.Net" Version="1.31.1" />
+    <PackageReference Include="AltV.Net.Async" Version="1.31.1" />
     <PackageReference Include="AltV.Net.Resources.Chat.Api" Version="1.27.0" />
     <PackageReference Include="MySql.Data" Version="8.0.20" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Admin\" />
   </ItemGroup>
 
 </Project>
