--- a/Gangwars.csproj
+++ b/Gangwars.csproj
@@ -1,15 +1,15 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net5.0</TargetFramework>
     <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="AltV.Net" Version="1.31.1" />
-    <PackageReference Include="AltV.Net.Async" Version="1.31.1" />
-    <PackageReference Include="AltV.Net.Resources.Chat.Api" Version="1.27.0" />
-    <PackageReference Include="MySql.Data" Version="8.0.20" />
+    <PackageReference Include="AltV.Net" Version="6.1.20" />
+    <PackageReference Include="AltV.Net.Async" Version="6.1.20" />
+    <PackageReference Include="AltV.Net.Resources.Chat.Api" Version="1.48.0" />
+    <PackageReference Include="MySql.Data" Version="8.0.27" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
